--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>AngularJS Leader Board</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="css/leaderboard.css" rel="stylesheet" />
     </head>
-    <body ng-controller="MainCtrl">
-        <h1>{{eventName}}</h1>
-        <h2>{{roundName}}</h2>
+    <body ng-controller="MainCtrl as main">
+        <h1>{{event.name}}</h1>
+        <h2>{{round.name}}</h2>
 
         <table class="table">
             <thead>
@@ -20,7 +20,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="(id, contestant) in contestants">
+            <tr ng-repeat="(id, contestant) in main.contestants">
                 <td>{{contestant.lane}}</td>
                 <td>{{contestant.name}}</td>
                 <td>{{contestant.score}}</td>
@@ -28,12 +28,13 @@
             </tbody>
         </table>
 
-        <script src="libs/jquery.min.js"></script>
-        <script src="libs/bootstrap.min.js"></script>
-        <script src="libs/sugar.custom.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-        <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/angularfire/0.5.0-rc1/angularfire.js"></script>
+        <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/sugar/1.4.1/sugar-full.min.js"></script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+        <script src="//cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
+        <script src="//cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
         <script src="js/leader-board.js"></script>
     </body>
