--- a/remote.html
+++ b/remote.html
@@ -4,20 +4,20 @@
         <title>AngularJS Leader Board</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="css/leaderboard.css"/>
     </head>
-    <body ng-controller="MainCtrl">
+    <body ng-controller="MainCtrl as main">
         <div class="container">
-            <h1>{{eventName}}</h1>
-            <h2>{{roundName}}</h2>
+            <h1>{{event.name}}</h1>
+            <h2>{{round.name}}</h2>
 
-            <select class="form-control" ng-model="currentContestant"
-                    ng-options="contestant.name for (key, contestant) in contestants">
+            <select class="form-control" ng-model="main.currentContestant"
+                    ng-options="contestant.name for (key, contestant) in main.contestants">
                 <option value="">Choose an Athlete</option>
             </select>
 
-            <div class="well remote" ng-hide="!currentContestant">
+            <div class="well remote" ng-hide="!main.currentContestant">
                 <table class="table">
                     <thead>
                     <tr>
@@ -28,29 +28,30 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>{{currentContestant.lane}}</td>
-                        <td>{{currentContestant.name}}</td>
-                        <td>{{currentContestant.score}}</td>
+                        <td>{{main.currentContestant.lane}}</td>
+                        <td>{{main.currentContestant.name}}</td>
+                        <td>{{main.currentContestant.score}}</td>
                     </tr>
                     </tbody>
                 </table>
 
                 <div class="row">
-                    <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="incrementScore()">Add One</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="main.incrementScore()">Add One</button>
                 </div>
 
                 <div class="row">
-                    <button type="button" class="btn btn-danger btn-lg btn-block" ng-click="decrementScore()">Minus One</button>
+                    <button type="button" class="btn btn-danger btn-lg btn-block" ng-click="main.decrementScore()">Minus One</button>
                 </div>
             </div>
         </div>
 
-        <script src="libs/jquery.min.js"></script>
-        <script src="libs/bootstrap.min.js"></script>
-        <script src="libs/sugar.custom.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-        <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/angularfire/0.5.0-rc1/angularfire.js"></script>
+        <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/sugar/1.4.1/sugar-full.min.js"></script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+        <script src="//cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
+        <script src="//cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
         <script src="js/leader-board.js"></script>
     </body>
