--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <script src="//cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
         <script src="//cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
-        <script src="js/leader-board.js"></script>
+        <script src="js/leader-board-static.js"></script>
     </body>
 </html>
