--- a/admin.html
+++ b/admin.html
@@ -31,11 +31,12 @@
 
         <div class="well">
             <h4>Add Contestant</h4>
+
             <form class="form-inline" role="form" novalidate ng-submit="main.addContestant()">
                 <div class="form-group">
                     <input type="text" class="form-control" ng-model="main.newContestant.lane" placeholder="Enter lane">
                 </div>
-                 <div class="form-group">
+                <div class="form-group">
                     <input type="text" class="form-control" ng-model="main.newContestant.name" placeholder="Contestant Name">
                 </div>
                 <div class="form-group">
@@ -53,6 +54,6 @@
         <script src="//cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
         <script src="//cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
-        <script src="js/leader-board.js"></script>
+        <script src="js/leader-board-static.js"></script>
     </body>
 </html>
