--- a/index.html
+++ b/index.html
@@ -7,24 +7,28 @@
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="css/leaderboard.css" rel="stylesheet" />
     </head>
-    <body ng-controller="MainCtrl as main">
-
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Lane</th>
-                <th>Contestant</th>
-                <th>Score</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="(id, contestant) in main.contestants">
-                <td>{{contestant.lane}}</td>
-                <td>{{contestant.name}}</td>
-                <td>{{contestant.score}}</td>
-            </tr>
-            </tbody>
-        </table>
+    <body>
+        <div class="container" ng-controller="MainCtrl as main">
+            <h3>Race to Awesome</h3>
+            <div class="well">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Lane</th>
+                        <th>Contestant</th>
+                        <th>Score</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="contestant in main.contestants">
+                        <td>{{contestant.lane}}</td>
+                        <td>{{contestant.name}}</td>
+                        <td>{{contestant.score}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
         <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
